creacion de radiobuttom y checklist

--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,29 @@
                 Enviar datos
             </button>
         </fieldset>
-
+    <br/>
+    crear radiobutton <br/>
+    <fieldset>
+        <legend> genero </legend>
+            <input type="radio" name="ejemplo" > hombre
+            <input type="radio" name="ejemplo" > mujer
+            <input type="radio" name="ejemplo" > prefiero no especificar 
+    </fieldset>
+    <br/>
+    crear checklist <br/>
+    <fieldset>
+        <legend> checkbox </legend>
+        <input type="checkbox" name="texto" > texto 1
+        <input type="checkbox" name="texto" > texto 7
+        <input type="checkbox" name="texto" > texto 4<br/>
+        <input type="checkbox" name="texto" > texto 2
+        <input type="checkbox" name="texto" > texto 8
+        <input type="checkbox" name="texto" > texto 5<br/>
+        <input type="checkbox" name="texto" > texto 3
+        <input type="checkbox" name="texto" > texto 9
+        <input type="checkbox" name="texto" > texto 6<br/>
+    </fieldset>
     </form>
+    
 </body>
 </html>
