se modifica nombre de carpeta de un tipo de fuente y se implementa en la nueva pagina el tipo de letra

--- a/html/servicios.html
+++ b/html/servicios.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   <style type="text/css">
+    @font-face {
+        font-family: SourceCodePro-Black;
+        src: url(../fonts/source_code_pro/SourceCodePro-Black.ttf) format("truetype");
+    }
+    p{
+        font-family: SourceCodePro-Black;
+    }    
+    </style>
 </head>
 <body>
     <h1>servicios</h1>
-    <p>Source Code Pro</p>
-    
+    <p>SourceCodePro</p>
+
 </body>
 </html>
