--- a/Index.html
+++ b/Index.html
@@ -61,6 +61,7 @@
         <input type="checkbox" name="texto" > texto 9
         <input type="checkbox" name="texto" > texto 6<br/>
     </fieldset>
+    <a href="html/servicios.html">ir a servicios</a>
     </form>
     
 </body>
